2021-03-14  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-browse-exclude-helper): Add mimetype support,
	and exclusion rule for mimetype: binary.
	(diredc-browse--exclude): Quote shell variables.

2021-03-12  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--show-more-file-info)
	(diredc-show-more-file-info): Give user feedback when shut off.

2021-03-12  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-browse--hook-function): Control window when
	maliciously deleted.

2021-03-12  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-browse-exclude-file-extensions): Add entries
	for docx and db files.
	(diredc-browse--exclude): Handle filenames with no extensions.

2021-03-12  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-browse--exclude): Update for Emacs 28
	compatability: deprecating when-let*.

2021-03-11  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-browse-exclude-file-extensions)
	(diredc-browse-exclude-coding-systems)
	(diredc-browse-exclude-helper): New defcustoms.
	(diredc--guess-decoding, diredc-browse--exclude)
	(diredc-browse--hook-function): Use them.
	(diredc-browse-mode): Describe new feature in docstring.

2021-03-11  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-shell-list): Correct defcustom.

2021-03-11  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-shell--bufwin): Redefine and make unused variable useful.
	(diredc-shell-kill, diredc-shell): Use it, to return control to
	parent window unpoin buffer being killed.

2021-01-12  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--advice--wdired-exit): Preserve
	bonus-configuration options on all exits from wdired mode
	(diredc--hook-function): Properly handle all exits from wdired mode.

2021-01-12  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-browse-mode): Ensure all data is cleaned upon
	exiting mode, handle opening not being on file line.
	(diredc-browse--hook-function): Handle gpg files and file insert